# gc-scope

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.github/: dependabot.yml
.github/actions/coverage-report/: action.yml
.github/workflows/: codspeed.yml  rust.yml
benches/: memory.rs
docs/: version-support.md
docs/adr/: 0001-pysession-resolve-once-facade.md  0002-version-split-runtime-finding.md  0003-layout-driven-gc-stats-decode.md  0004-per-platform-image-layout.md  0005-testing-strategy.md  0006-layout-registration-integrity.md  0007-gcstat-layout-driven-view.md  0008-reader-consumer-package-layering.md  0009-performance-guarded-by-shape.md  README.md
scripts/: gen-offsets-table.py  gen-offsets.py
src/: cli.rs  cli_monitor.rs  cli_monitor_options.rs  lib.rs  list_pids.rs  main.rs  monitor.rs  monitor_loop.rs
src/cli/: mod.rs  monitor.rs
src/diagram/: ascii.rs  collect.rs  mod.rs  pid_dialog.rs  poller.rs  render.rs  tui_v2.rs
src/exporters/: chrome.rs  mod.rs  timing.rs
src/memory/: binary.rs  dump.rs  mod.rs  process.rs  reader.rs  regions.rs
src/monitor/: context.rs  mod.rs  run_loop.rs
src/monitor/exporters/: chrome.rs  mod.rs
src/remote_debugging/: check_interpreter.rs  collect.rs  gc_stats.rs  mod.rs  poller.rs  session.rs  version.rs
src/remote_debugging/offsets/: display.rs  mod.rs  (+16 more)
src/snapshot/: collect.rs  mod.rs  poller.rs
src/tui/: format.rs  frame.rs  gc_view.rs  glitch.rs  layout.rs  mod.rs  pid_dialog.rs  sections.rs  test_support.rs  tree.rs
tests/: diagram.rs  lifecycle.rs  live_smoke.py  live_smoke.rs  memory.rs  monitor.rs  remote_debugging.rs  spawn.rs  tui.rs
tests/common/: mod.rs
tests/fixtures/: spin.py
(+9 files in other folders)
